--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ const SCORE_PER_OBSTACLE = 10;
 const VILLAIN_WIDTH = 150 * 2, VILLAIN_HEIGHT = 200 * 1.5;
 
 const ASSETS = {
-  backgroundTitle: './background/title.png',
+  title: './background/title.png',
   startBtn: './background/gamestart.png',
   gameOver: './background/gameover.png',
   restart: './background/restart.png',
@@ -66,40 +66,48 @@ window.onload = () => {
   canvas.width = CANVAS_WIDTH;
   canvas.height = CANVAS_HEIGHT;
 
-  let images = {};
-  let loaded = 0;
-  let total = 3 + ASSETS.backgrounds.length + ASSETS.villains.length + ASSETS.obstacles.length;
+  let runnerY = RUNNER_START_Y;
+  let jump = false;
+  let gameStarted = false;
+  let gameOver = false;
+  let bgIndex = 0;
+  let score = 0;
+  let timer = 0;
+  let obstacleSpeed = BASE_OBSTACLE_SPEED;
+  let obstacleFrequency = BASE_OBSTACLE_FREQUENCY;
+  let villainY = CANVAS_HEIGHT;
+  let targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
+  let villainReady = false;
+  let exitingVillain = false;
 
-  const loadImage = (name, src) => {
+  const scoreText = document.getElementById('score');
+
+  const images = {};
+  const loadImage = (key, src) => {
     const img = new Image();
     img.src = src;
-    img.onload = () => {
-      images[name] = img;
-      loaded++;
-      if (loaded === total) drawStartScreen();
+    images[key] = img;
+  };
+
+  // 먼저 title + gamestart만 로드해서 시작화면 띄우기
+  loadImage('title', ASSETS.title);
+  loadImage('startBtn', ASSETS.startBtn);
+
+  images.title.onload = () => {
+    images.startBtn.onload = () => {
+      drawStartScreen();
     };
   };
 
-  loadImage('title', ASSETS.backgroundTitle);
-  loadImage('startBtn', ASSETS.startBtn);
+  // 그 다음 다른 리소스 비동기로 천천히 로딩
   loadImage('gameOver', ASSETS.gameOver);
   loadImage('restart', ASSETS.restart);
   loadImage('runnerSit', ASSETS.runnerSit);
   loadImage('runnerFly', ASSETS.runnerFly);
   loadImage('runnerCrash', ASSETS.runnerCrash);
-
   ASSETS.backgrounds.forEach((src, i) => loadImage('bg' + i, src));
   ASSETS.villains.forEach((src, i) => loadImage('villain' + i, src));
   ASSETS.obstacles.forEach((src, i) => loadImage('obstacle' + i, src));
-
-  let gameStarted = false, gameOver = false, score = 0, timer = 0, jump = false;
-  let bgIndex = 0, villainY = CANVAS_HEIGHT, targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
-  let obstacleSpeed = BASE_OBSTACLE_SPEED, obstacleFrequency = BASE_OBSTACLE_FREQUENCY;
-  let villainReady = false;
-
-  const scoreText = document.getElementById('score');
-
-  const runner = { x: RUNNER_START_X, y: RUNNER_START_Y, width: RUNNER_WIDTH, height: RUNNER_HEIGHT };
 
   class Obstacle {
     constructor(image) {
@@ -115,6 +123,7 @@ window.onload = () => {
       ctx.drawImage(this.image, this.x, this.y, this.width, this.height);
     }
   }
+
   const obstacles = [];
 
   function drawStartScreen() {
@@ -123,27 +132,42 @@ window.onload = () => {
     ctx.drawImage(images.startBtn, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
   }
 
-  function animate() {
-    if (gameOver) return;
+  function drawGameOverScreen() {
+    ctx.drawImage(images.gameOver, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
+    ctx.drawImage(images.restart, (CANVAS_WIDTH - 100) / 2, (CANVAS_HEIGHT + 50) / 2, 100, 50);
+  }
 
+  function isCollision(a, b) {
+    return !(a.x > b.x + b.width || a.x + a.width < b.x || a.y > b.y + b.height || a.y + a.height < b.y);
+  }
+
+  function animate() {
+    if (gameOver) {
+      drawGameOverScreen();
+      return;
+    }
     requestAnimationFrame(animate);
     ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+
     ctx.drawImage(images['bg' + bgIndex], 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
 
     if (!villainReady && villainY > targetVillainY) {
       villainY -= 5;
+    } else if (villainReady && exitingVillain && villainY < CANVAS_HEIGHT) {
+      villainY += 5;
     } else {
+      exitingVillain = false;
       villainReady = true;
     }
 
     ctx.drawImage(images['villain' + bgIndex], CANVAS_WIDTH - VILLAIN_WIDTH, villainY, VILLAIN_WIDTH, VILLAIN_HEIGHT);
 
-    if (villainReady && timer % obstacleFrequency === 0) {
+    if (villainReady && !exitingVillain && timer % obstacleFrequency === 0) {
       if (bgIndex < 5) {
         obstacles.push(new Obstacle(images['obstacle' + bgIndex]));
       } else {
         for (let i = 0; i < 2; i++) {
-          const img = images['obstacle' + (Math.floor(Math.random() * 5))];
+          const img = images['obstacle' + Math.floor(Math.random() * 5)];
           obstacles.push(new Obstacle(img));
         }
       }
@@ -152,56 +176,41 @@ window.onload = () => {
     obstacles.forEach((obs, idx) => {
       obs.x -= obstacleSpeed;
       obs.draw(bgIndex === 5);
-      if (isCollision(runner, obs)) {
+      if (isCollision({ x: RUNNER_START_X, y: runnerY, width: RUNNER_WIDTH, height: RUNNER_HEIGHT }, obs)) {
         gameOver = true;
       }
       if (obs.x < -obs.width) {
         obstacles.splice(idx, 1);
         score += SCORE_PER_OBSTACLE;
         scoreText.textContent = '현재점수: ' + score;
-
         if (score % 200 === 0) {
           villainReady = false;
-          let exitInterval = setInterval(() => {
-            villainY += 5;
-            if (villainY >= CANVAS_HEIGHT) {
-              clearInterval(exitInterval);
-              bgIndex = Math.min(5, Math.floor(score / 200));
-              obstacleSpeed += 1;
-              obstacleFrequency = Math.max(20, obstacleFrequency - 10);
-              villainY = CANVAS_HEIGHT;
-              targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
-            }
-          }, 30);
+          exitingVillain = true;
+          setTimeout(() => {
+            bgIndex = Math.min(5, Math.floor(score / 200));
+            obstacleSpeed += 1;
+            obstacleFrequency = Math.max(20, obstacleFrequency - 10);
+            villainY = CANVAS_HEIGHT;
+            targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
+          }, 1000);
         }
       }
     });
 
-    const runnerImage = (gameOver ? images.runnerCrash : (jump || runner.y < RUNNER_START_Y) ? images.runnerFly : images.runnerSit);
-    ctx.drawImage(runnerImage, runner.x, runner.y, runner.width, runner.height);
+    const runnerImage = (jump || runnerY < RUNNER_START_Y) ? images.runnerFly : images.runnerSit;
+    ctx.drawImage(runnerImage, RUNNER_START_X, runnerY, RUNNER_WIDTH, RUNNER_HEIGHT);
 
-    runner.y += jump ? -JUMP_SPEED : JUMP_SPEED;
-    if (runner.y < MAX_JUMP_HEIGHT) jump = false;
-    if (runner.y > RUNNER_START_Y) runner.y = RUNNER_START_Y;
+    runnerY += jump ? -JUMP_SPEED : JUMP_SPEED;
+    if (runnerY < MAX_JUMP_HEIGHT) jump = false;
+    if (runnerY > RUNNER_START_Y) runnerY = RUNNER_START_Y;
 
     timer++;
-
-    if (gameOver) drawGameOver();
-  }
-
-  function isCollision(a, b) {
-    return !(a.x > b.x + b.width || a.x + a.width < b.x || a.y > b.y + b.height || a.y + a.height < b.y);
-  }
-
-  function drawGameOver() {
-    ctx.drawImage(images.gameOver, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
-    ctx.drawImage(images.restart, (CANVAS_WIDTH - 100) / 2, (CANVAS_HEIGHT + 50) / 2, 100, 50);
   }
 
   canvas.addEventListener('click', e => {
     const rect = canvas.getBoundingClientRect();
-    const x = e.clientX - rect.left, y = e.clientY - rect.top;
-
+    const x = e.clientX - rect.left;
+    const y = e.clientY - rect.top;
     if (!gameStarted) {
       if (x >= (CANVAS_WIDTH - 200) / 2 && x <= (CANVAS_WIDTH + 200) / 2 &&
           y >= (CANVAS_HEIGHT + 100) / 2 && y <= (CANVAS_HEIGHT + 200) / 2) {
@@ -225,5 +234,6 @@ window.onload = () => {
   });
 };
 </script>
+
 </body>
 </html>
