--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ const SCORE_PER_OBSTACLE = 10;
 const VILLAIN_WIDTH = 150 * 2, VILLAIN_HEIGHT = 200 * 1.5;
 
 const ASSETS = {
-  title: './background/title.png',
+  backgroundTitle: './background/title.png',
   startBtn: './background/gamestart.png',
   gameOver: './background/gameover.png',
   restart: './background/restart.png',
@@ -66,48 +66,67 @@ window.onload = () => {
   canvas.width = CANVAS_WIDTH;
   canvas.height = CANVAS_HEIGHT;
 
+  const scoreText = document.getElementById('score');
+
   let runnerY = RUNNER_START_Y;
   let jump = false;
   let gameStarted = false;
   let gameOver = false;
+  let allGameImagesLoaded = false;
+  let startButtonClicked = false;
+
   let bgIndex = 0;
-  let score = 0;
-  let timer = 0;
-  let obstacleSpeed = BASE_OBSTACLE_SPEED;
-  let obstacleFrequency = BASE_OBSTACLE_FREQUENCY;
   let villainY = CANVAS_HEIGHT;
   let targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
   let villainReady = false;
   let exitingVillain = false;
-
-  const scoreText = document.getElementById('score');
+  let obstacleSpeed = BASE_OBSTACLE_SPEED;
+  let obstacleFrequency = BASE_OBSTACLE_FREQUENCY;
+  let score = 0;
+  let timer = 0;
 
   const images = {};
+
   const loadImage = (key, src) => {
-    const img = new Image();
-    img.src = src;
-    images[key] = img;
+    return new Promise(resolve => {
+      const img = new Image();
+      img.src = src;
+      img.onload = () => {
+        images[key] = img;
+        resolve();
+      };
+    });
   };
 
-  // 먼저 title + gamestart만 로드해서 시작화면 띄우기
-  loadImage('title', ASSETS.title);
-  loadImage('startBtn', ASSETS.startBtn);
-
-  images.title.onload = () => {
-    images.startBtn.onload = () => {
-      drawStartScreen();
-    };
+  const preloadImages = async () => {
+    const promises = [
+      loadImage('title', ASSETS.backgroundTitle),
+      loadImage('startBtn', ASSETS.startBtn),
+      loadImage('gameOver', ASSETS.gameOver),
+      loadImage('restart', ASSETS.restart),
+      loadImage('runnerSit', ASSETS.runnerSit),
+      loadImage('runnerFly', ASSETS.runnerFly),
+      loadImage('runnerCrash', ASSETS.runnerCrash),
+      ...ASSETS.backgrounds.map((src, i) => loadImage('bg' + i, src)),
+      ...ASSETS.villains.map((src, i) => loadImage('villain' + i, src)),
+      ...ASSETS.obstacles.map((src, i) => loadImage('obstacle' + i, src))
+    ];
+    await Promise.all(promises);
+    allGameImagesLoaded = true;
+    if (startButtonClicked) {
+      animate();
+    }
   };
 
-  // 그 다음 다른 리소스 비동기로 천천히 로딩
-  loadImage('gameOver', ASSETS.gameOver);
-  loadImage('restart', ASSETS.restart);
-  loadImage('runnerSit', ASSETS.runnerSit);
-  loadImage('runnerFly', ASSETS.runnerFly);
-  loadImage('runnerCrash', ASSETS.runnerCrash);
-  ASSETS.backgrounds.forEach((src, i) => loadImage('bg' + i, src));
-  ASSETS.villains.forEach((src, i) => loadImage('villain' + i, src));
-  ASSETS.obstacles.forEach((src, i) => loadImage('obstacle' + i, src));
+  preloadImages().then(() => {
+    drawStartScreen();
+  });
+
+  function drawStartScreen() {
+    ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+    ctx.drawImage(images.title, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+    ctx.drawImage(images.startBtn, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
+  }
 
   class Obstacle {
     constructor(image) {
@@ -126,24 +145,10 @@ window.onload = () => {
 
   const obstacles = [];
 
-  function drawStartScreen() {
-    ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-    ctx.drawImage(images.title, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-    ctx.drawImage(images.startBtn, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
-  }
-
-  function drawGameOverScreen() {
-    ctx.drawImage(images.gameOver, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
-    ctx.drawImage(images.restart, (CANVAS_WIDTH - 100) / 2, (CANVAS_HEIGHT + 50) / 2, 100, 50);
-  }
-
-  function isCollision(a, b) {
-    return !(a.x > b.x + b.width || a.x + a.width < b.x || a.y > b.y + b.height || a.y + a.height < b.y);
-  }
-
   function animate() {
     if (gameOver) {
-      drawGameOverScreen();
+      ctx.drawImage(images.gameOver, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
+      ctx.drawImage(images.restart, (CANVAS_WIDTH - 100) / 2, (CANVAS_HEIGHT + 50) / 2, 100, 50);
       return;
     }
     requestAnimationFrame(animate);
@@ -167,8 +172,7 @@ window.onload = () => {
         obstacles.push(new Obstacle(images['obstacle' + bgIndex]));
       } else {
         for (let i = 0; i < 2; i++) {
-          const img = images['obstacle' + Math.floor(Math.random() * 5)];
-          obstacles.push(new Obstacle(img));
+          obstacles.push(new Obstacle(images['obstacle' + Math.floor(Math.random() * 5)]));
         }
       }
     }
@@ -191,7 +195,6 @@ window.onload = () => {
             obstacleSpeed += 1;
             obstacleFrequency = Math.max(20, obstacleFrequency - 10);
             villainY = CANVAS_HEIGHT;
-            targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
           }, 1000);
         }
       }
@@ -207,19 +210,26 @@ window.onload = () => {
     timer++;
   }
 
+  function isCollision(a, b) {
+    return !(a.x > b.x + b.width || a.x + a.width < b.x || a.y > b.y + b.height || a.y + a.height < b.y);
+  }
+
   canvas.addEventListener('click', e => {
     const rect = canvas.getBoundingClientRect();
-    const x = e.clientX - rect.left;
-    const y = e.clientY - rect.top;
+    const x = e.clientX - rect.left, y = e.clientY - rect.top;
+    const btnX = (CANVAS_WIDTH - 200) / 2, btnY = (CANVAS_HEIGHT + 100) / 2;
+
     if (!gameStarted) {
-      if (x >= (CANVAS_WIDTH - 200) / 2 && x <= (CANVAS_WIDTH + 200) / 2 &&
-          y >= (CANVAS_HEIGHT + 100) / 2 && y <= (CANVAS_HEIGHT + 200) / 2) {
+      if (x >= btnX && x <= btnX + 200 && y >= btnY && y <= btnY + 100) {
         gameStarted = true;
-        animate();
+        startButtonClicked = true;
+        if (allGameImagesLoaded) {
+          animate();
+        }
       }
     } else if (gameOver) {
-      if (x >= (CANVAS_WIDTH - 100) / 2 && x <= (CANVAS_WIDTH + 100) / 2 &&
-          y >= (CANVAS_HEIGHT + 50) / 2 && y <= (CANVAS_HEIGHT + 100) / 2) {
+      const rx = (CANVAS_WIDTH - 100) / 2, ry = (CANVAS_HEIGHT + 50) / 2;
+      if (x >= rx && x <= rx + 100 && y >= ry && y <= ry + 50) {
         location.reload();
       }
     }
@@ -228,7 +238,6 @@ window.onload = () => {
   document.addEventListener('keydown', e => {
     if (e.code === 'Space') jump = true;
   });
-
   document.addEventListener('keyup', e => {
     if (e.code === 'Space') jump = false;
   });
