--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-<p id="subtitle">밥먹자! 안지민</p>
-<p id="score">현재점수: 0</p>
-<main><canvas id="canvas"></canvas></main>
+  <p id="subtitle">밥먹자! 안지민</p>
+  <p id="score">현재점수: 0</p>
+  <main><canvas id="canvas"></canvas></main>
 
 <script>
 const CANVAS_WIDTH = 800, CANVAS_HEIGHT = 500;
@@ -66,67 +66,45 @@ window.onload = () => {
   canvas.width = CANVAS_WIDTH;
   canvas.height = CANVAS_HEIGHT;
 
-  const scoreText = document.getElementById('score');
+  let images = {};
+  let loaded = 0;
+  const totalImages = 3 + 3 + ASSETS.backgrounds.length + ASSETS.villains.length + ASSETS.obstacles.length;
 
-  let runnerY = RUNNER_START_Y;
-  let jump = false;
-  let gameStarted = false;
-  let gameOver = false;
-  let allGameImagesLoaded = false;
-  let startButtonClicked = false;
+  const loadImage = (name, src) => {
+    const img = new Image();
+    img.src = src;
+    img.onload = () => {
+      images[name] = img;
+      loaded++;
+      if (loaded === totalImages) {
+        drawStartScreen();
+        readyToStart = true;
+      }
+    };
+  };
 
-  let bgIndex = 0;
-  let villainY = CANVAS_HEIGHT;
-  let targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
+  // 이미지 로드
+  loadImage('title', ASSETS.backgroundTitle);
+  loadImage('startBtn', ASSETS.startBtn);
+  loadImage('gameOver', ASSETS.gameOver);
+  loadImage('restart', ASSETS.restart);
+  loadImage('runnerSit', ASSETS.runnerSit);
+  loadImage('runnerFly', ASSETS.runnerFly);
+  loadImage('runnerCrash', ASSETS.runnerCrash);
+  ASSETS.backgrounds.forEach((src, i) => loadImage('bg' + i, src));
+  ASSETS.villains.forEach((src, i) => loadImage('villain' + i, src));
+  ASSETS.obstacles.forEach((src, i) => loadImage('obstacle' + i, src));
+
+  let gameStarted = false, gameOver = false;
+  let score = 0, timer = 0, jump = false;
+  let bgIndex = 0, villainY = CANVAS_HEIGHT, targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
+  let obstacleSpeed = BASE_OBSTACLE_SPEED, obstacleFrequency = BASE_OBSTACLE_FREQUENCY;
   let villainReady = false;
-  let exitingVillain = false;
-  let obstacleSpeed = BASE_OBSTACLE_SPEED;
-  let obstacleFrequency = BASE_OBSTACLE_FREQUENCY;
-  let score = 0;
-  let timer = 0;
+  let readyToStart = false;
 
-  const images = {};
-
-  const loadImage = (key, src) => {
-    return new Promise(resolve => {
-      const img = new Image();
-      img.src = src;
-      img.onload = () => {
-        images[key] = img;
-        resolve();
-      };
-    });
-  };
-
-  const preloadImages = async () => {
-    const promises = [
-      loadImage('title', ASSETS.backgroundTitle),
-      loadImage('startBtn', ASSETS.startBtn),
-      loadImage('gameOver', ASSETS.gameOver),
-      loadImage('restart', ASSETS.restart),
-      loadImage('runnerSit', ASSETS.runnerSit),
-      loadImage('runnerFly', ASSETS.runnerFly),
-      loadImage('runnerCrash', ASSETS.runnerCrash),
-      ...ASSETS.backgrounds.map((src, i) => loadImage('bg' + i, src)),
-      ...ASSETS.villains.map((src, i) => loadImage('villain' + i, src)),
-      ...ASSETS.obstacles.map((src, i) => loadImage('obstacle' + i, src))
-    ];
-    await Promise.all(promises);
-    allGameImagesLoaded = true;
-    if (startButtonClicked) {
-      animate();
-    }
-  };
-
-  preloadImages().then(() => {
-    drawStartScreen();
-  });
-
-  function drawStartScreen() {
-    ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-    ctx.drawImage(images.title, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-    ctx.drawImage(images.startBtn, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
-  }
+  const scoreText = document.getElementById('score');
+  const runner = { x: RUNNER_START_X, y: RUNNER_START_Y, width: RUNNER_WIDTH, height: RUNNER_HEIGHT };
+  const obstacles = [];
 
   class Obstacle {
     constructor(image) {
@@ -143,36 +121,34 @@ window.onload = () => {
     }
   }
 
-  const obstacles = [];
+  function drawStartScreen() {
+    ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+    ctx.drawImage(images.title, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+    ctx.drawImage(images.startBtn, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
+  }
 
   function animate() {
-    if (gameOver) {
-      ctx.drawImage(images.gameOver, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
-      ctx.drawImage(images.restart, (CANVAS_WIDTH - 100) / 2, (CANVAS_HEIGHT + 50) / 2, 100, 50);
-      return;
-    }
+    if (gameOver) return;
+
     requestAnimationFrame(animate);
     ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-
     ctx.drawImage(images['bg' + bgIndex], 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
 
     if (!villainReady && villainY > targetVillainY) {
       villainY -= 5;
-    } else if (villainReady && exitingVillain && villainY < CANVAS_HEIGHT) {
-      villainY += 5;
     } else {
-      exitingVillain = false;
       villainReady = true;
     }
 
     ctx.drawImage(images['villain' + bgIndex], CANVAS_WIDTH - VILLAIN_WIDTH, villainY, VILLAIN_WIDTH, VILLAIN_HEIGHT);
 
-    if (villainReady && !exitingVillain && timer % obstacleFrequency === 0) {
+    if (villainReady && timer % obstacleFrequency === 0) {
       if (bgIndex < 5) {
         obstacles.push(new Obstacle(images['obstacle' + bgIndex]));
       } else {
         for (let i = 0; i < 2; i++) {
-          obstacles.push(new Obstacle(images['obstacle' + Math.floor(Math.random() * 5)]));
+          const img = images['obstacle' + Math.floor(Math.random() * 5)];
+          obstacles.push(new Obstacle(img));
         }
       }
     }
@@ -180,41 +156,54 @@ window.onload = () => {
     obstacles.forEach((obs, idx) => {
       obs.x -= obstacleSpeed;
       obs.draw(bgIndex === 5);
-      if (isCollision({ x: RUNNER_START_X, y: runnerY, width: RUNNER_WIDTH, height: RUNNER_HEIGHT }, obs)) {
+      if (isCollision(runner, obs)) {
         gameOver = true;
       }
       if (obs.x < -obs.width) {
         obstacles.splice(idx, 1);
         score += SCORE_PER_OBSTACLE;
         scoreText.textContent = '현재점수: ' + score;
+
         if (score % 200 === 0) {
           villainReady = false;
-          exitingVillain = true;
-          setTimeout(() => {
-            bgIndex = Math.min(5, Math.floor(score / 200));
-            obstacleSpeed += 1;
-            obstacleFrequency = Math.max(20, obstacleFrequency - 10);
-            villainY = CANVAS_HEIGHT;
-          }, 1000);
+          let exitInterval = setInterval(() => {
+            villainY += 5;
+            if (villainY >= CANVAS_HEIGHT) {
+              clearInterval(exitInterval);
+              bgIndex = Math.min(5, Math.floor(score / 200));
+              obstacleSpeed += 1;
+              obstacleFrequency = Math.max(20, obstacleFrequency - 10);
+              villainY = CANVAS_HEIGHT;
+              targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
+            }
+          }, 30);
         }
       }
     });
 
-    const runnerImage = (jump || runnerY < RUNNER_START_Y) ? images.runnerFly : images.runnerSit;
-    ctx.drawImage(runnerImage, RUNNER_START_X, runnerY, RUNNER_WIDTH, RUNNER_HEIGHT);
+    const runnerImage = (gameOver ? images.runnerCrash : (jump || runner.y < RUNNER_START_Y) ? images.runnerFly : images.runnerSit);
+    ctx.drawImage(runnerImage, runner.x, runner.y, runner.width, runner.height);
 
-    runnerY += jump ? -JUMP_SPEED : JUMP_SPEED;
-    if (runnerY < MAX_JUMP_HEIGHT) jump = false;
-    if (runnerY > RUNNER_START_Y) runnerY = RUNNER_START_Y;
+    runner.y += jump ? -JUMP_SPEED : JUMP_SPEED;
+    if (runner.y < MAX_JUMP_HEIGHT) jump = false;
+    if (runner.y > RUNNER_START_Y) runner.y = RUNNER_START_Y;
 
     timer++;
+
+    if (gameOver) drawGameOver();
   }
 
   function isCollision(a, b) {
     return !(a.x > b.x + b.width || a.x + a.width < b.x || a.y > b.y + b.height || a.y + a.height < b.y);
   }
 
+  function drawGameOver() {
+    ctx.drawImage(images.gameOver, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
+    ctx.drawImage(images.restart, (CANVAS_WIDTH - 100) / 2, (CANVAS_HEIGHT + 50) / 2, 100, 50);
+  }
+
   canvas.addEventListener('click', e => {
+    if (!readyToStart) return;
     const rect = canvas.getBoundingClientRect();
     const x = e.clientX - rect.left, y = e.clientY - rect.top;
     const btnX = (CANVAS_WIDTH - 200) / 2, btnY = (CANVAS_HEIGHT + 100) / 2;
@@ -222,10 +211,7 @@ window.onload = () => {
     if (!gameStarted) {
       if (x >= btnX && x <= btnX + 200 && y >= btnY && y <= btnY + 100) {
         gameStarted = true;
-        startButtonClicked = true;
-        if (allGameImagesLoaded) {
-          animate();
-        }
+        animate();
       }
     } else if (gameOver) {
       const rx = (CANVAS_WIDTH - 100) / 2, ry = (CANVAS_HEIGHT + 50) / 2;
@@ -243,6 +229,5 @@ window.onload = () => {
   });
 };
 </script>
-
 </body>
 </html>
