--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-  <p id="subtitle">밥먹자! 안지민</p>
-  <p id="score">현재점수: 0</p>
-  <main><canvas id="canvas"></canvas></main>
+<p id="subtitle">밥먹자! 안지민</p>
+<p id="score">현재점수: 0</p>
+<main><canvas id="canvas"></canvas></main>
 
 <script>
 const CANVAS_WIDTH = 800, CANVAS_HEIGHT = 500;
@@ -66,24 +66,26 @@ window.onload = () => {
   canvas.width = CANVAS_WIDTH;
   canvas.height = CANVAS_HEIGHT;
 
-  let images = {};
-  let loaded = 0;
-  const totalImages = 3 + 3 + ASSETS.backgrounds.length + ASSETS.villains.length + ASSETS.obstacles.length;
+  const scoreText = document.getElementById('score');
 
-  const loadImage = (name, src) => {
+  // 이미지 객체 준비
+  const images = {};
+  let loaded = 0;
+  const total =
+    3 + 3 + ASSETS.backgrounds.length + ASSETS.villains.length + ASSETS.obstacles.length;
+
+  function loadImage(name, src) {
     const img = new Image();
     img.src = src;
     img.onload = () => {
       images[name] = img;
       loaded++;
-      if (loaded === totalImages) {
+      if (loaded === total) {
         drawStartScreen();
-        readyToStart = true;
       }
     };
-  };
+  }
 
-  // 이미지 로드
   loadImage('title', ASSETS.backgroundTitle);
   loadImage('startBtn', ASSETS.startBtn);
   loadImage('gameOver', ASSETS.gameOver);
@@ -91,18 +93,18 @@ window.onload = () => {
   loadImage('runnerSit', ASSETS.runnerSit);
   loadImage('runnerFly', ASSETS.runnerFly);
   loadImage('runnerCrash', ASSETS.runnerCrash);
+
   ASSETS.backgrounds.forEach((src, i) => loadImage('bg' + i, src));
   ASSETS.villains.forEach((src, i) => loadImage('villain' + i, src));
   ASSETS.obstacles.forEach((src, i) => loadImage('obstacle' + i, src));
 
   let gameStarted = false, gameOver = false;
   let score = 0, timer = 0, jump = false;
-  let bgIndex = 0, villainY = CANVAS_HEIGHT, targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
+  let bgIndex = 0;
+  let villainY = CANVAS_HEIGHT, targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
   let obstacleSpeed = BASE_OBSTACLE_SPEED, obstacleFrequency = BASE_OBSTACLE_FREQUENCY;
   let villainReady = false;
-  let readyToStart = false;
 
-  const scoreText = document.getElementById('score');
   const runner = { x: RUNNER_START_X, y: RUNNER_START_Y, width: RUNNER_WIDTH, height: RUNNER_HEIGHT };
   const obstacles = [];
 
@@ -127,32 +129,48 @@ window.onload = () => {
     ctx.drawImage(images.startBtn, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
   }
 
+  function isCollision(a, b) {
+    return !(a.x > b.x + b.width || a.x + a.width < b.x || a.y > b.y + b.height || a.y + a.height < b.y);
+  }
+
+  function drawGameOverScreen() {
+    ctx.drawImage(images.gameOver, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
+    ctx.drawImage(images.restart, (CANVAS_WIDTH - 100) / 2, (CANVAS_HEIGHT + 50) / 2, 100, 50);
+  }
+
   function animate() {
-    if (gameOver) return;
+    if (gameOver) {
+      drawGameOverScreen();
+      return;
+    }
 
     requestAnimationFrame(animate);
     ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
     ctx.drawImage(images['bg' + bgIndex], 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
 
+    // 악당 등장
     if (!villainReady && villainY > targetVillainY) {
       villainY -= 5;
     } else {
+      villainY = targetVillainY;
       villainReady = true;
     }
 
     ctx.drawImage(images['villain' + bgIndex], CANVAS_WIDTH - VILLAIN_WIDTH, villainY, VILLAIN_WIDTH, VILLAIN_HEIGHT);
 
+    // 장애물 생성
     if (villainReady && timer % obstacleFrequency === 0) {
       if (bgIndex < 5) {
         obstacles.push(new Obstacle(images['obstacle' + bgIndex]));
       } else {
         for (let i = 0; i < 2; i++) {
-          const img = images['obstacle' + Math.floor(Math.random() * 5)];
+          const img = images['obstacle' + (Math.floor(Math.random() * 5))];
           obstacles.push(new Obstacle(img));
         }
       }
     }
 
+    // 장애물 이동
     obstacles.forEach((obs, idx) => {
       obs.x -= obstacleSpeed;
       obs.draw(bgIndex === 5);
@@ -164,6 +182,7 @@ window.onload = () => {
         score += SCORE_PER_OBSTACLE;
         scoreText.textContent = '현재점수: ' + score;
 
+        // 스테이지 전환
         if (score % 200 === 0) {
           villainReady = false;
           let exitInterval = setInterval(() => {
@@ -181,41 +200,34 @@ window.onload = () => {
       }
     });
 
+    // 점프 처리
+    if (jump && runner.y > MAX_JUMP_HEIGHT) {
+      runner.y -= JUMP_SPEED;
+      if (runner.y <= MAX_JUMP_HEIGHT) runner.y = MAX_JUMP_HEIGHT; // 천장에서 멈추게
+    } else if (!jump && runner.y < RUNNER_START_Y) {
+      runner.y += JUMP_SPEED;
+      if (runner.y > RUNNER_START_Y) runner.y = RUNNER_START_Y;
+    }
+
     const runnerImage = (gameOver ? images.runnerCrash : (jump || runner.y < RUNNER_START_Y) ? images.runnerFly : images.runnerSit);
     ctx.drawImage(runnerImage, runner.x, runner.y, runner.width, runner.height);
 
-    runner.y += jump ? -JUMP_SPEED : JUMP_SPEED;
-    if (runner.y < MAX_JUMP_HEIGHT) jump = false;
-    if (runner.y > RUNNER_START_Y) runner.y = RUNNER_START_Y;
-
     timer++;
-
-    if (gameOver) drawGameOver();
   }
 
-  function isCollision(a, b) {
-    return !(a.x > b.x + b.width || a.x + a.width < b.x || a.y > b.y + b.height || a.y + a.height < b.y);
-  }
-
-  function drawGameOver() {
-    ctx.drawImage(images.gameOver, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
-    ctx.drawImage(images.restart, (CANVAS_WIDTH - 100) / 2, (CANVAS_HEIGHT + 50) / 2, 100, 50);
-  }
-
+  // 이벤트 처리
   canvas.addEventListener('click', e => {
-    if (!readyToStart) return;
     const rect = canvas.getBoundingClientRect();
     const x = e.clientX - rect.left, y = e.clientY - rect.top;
-    const btnX = (CANVAS_WIDTH - 200) / 2, btnY = (CANVAS_HEIGHT + 100) / 2;
-
     if (!gameStarted) {
-      if (x >= btnX && x <= btnX + 200 && y >= btnY && y <= btnY + 100) {
+      if (x >= (CANVAS_WIDTH - 200) / 2 && x <= (CANVAS_WIDTH + 200) / 2 &&
+          y >= (CANVAS_HEIGHT + 100) / 2 && y <= (CANVAS_HEIGHT + 200) / 2) {
         gameStarted = true;
         animate();
       }
     } else if (gameOver) {
-      const rx = (CANVAS_WIDTH - 100) / 2, ry = (CANVAS_HEIGHT + 50) / 2;
-      if (x >= rx && x <= rx + 100 && y >= ry && y <= ry + 50) {
+      if (x >= (CANVAS_WIDTH - 100) / 2 && x <= (CANVAS_WIDTH + 100) / 2 &&
+          y >= (CANVAS_HEIGHT + 50) / 2 && y <= (CANVAS_HEIGHT + 100) / 2) {
         location.reload();
       }
     }
@@ -224,6 +236,7 @@ window.onload = () => {
   document.addEventListener('keydown', e => {
     if (e.code === 'Space') jump = true;
   });
+
   document.addEventListener('keyup', e => {
     if (e.code === 'Space') jump = false;
   });
