--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>밥먹자! 안지민</title>
   <style>
-    body { background: #f0f0f0; font-size: 16px; margin: 0; padding: 20px; color: #333; }
+    body { background: #f0f0f0; margin: 0; padding: 20px; color: #333; }
     canvas { display: block; margin: 0 auto; background: #fff; border: 1px solid #ccc; border-radius: 12px; }
     #subtitle, #score { text-align: center; }
     #subtitle { font-size: 20px; }
@@ -66,13 +66,9 @@ window.onload = () => {
   canvas.width = CANVAS_WIDTH;
   canvas.height = CANVAS_HEIGHT;
 
-  const scoreText = document.getElementById('score');
-
-  // 이미지 객체 준비
-  const images = {};
+  let images = {};
   let loaded = 0;
-  const total =
-    3 + 3 + ASSETS.backgrounds.length + ASSETS.villains.length + ASSETS.obstacles.length;
+  const total = 3 + 6 + 6 + 5; // title/startBtn/gameOver/restart + 6배경 + 6악당 + 5장애물
 
   function loadImage(name, src) {
     const img = new Image();
@@ -98,15 +94,14 @@ window.onload = () => {
   ASSETS.villains.forEach((src, i) => loadImage('villain' + i, src));
   ASSETS.obstacles.forEach((src, i) => loadImage('obstacle' + i, src));
 
-  let gameStarted = false, gameOver = false;
-  let score = 0, timer = 0, jump = false;
-  let bgIndex = 0;
-  let villainY = CANVAS_HEIGHT, targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
+  let gameStarted = false, gameOver = false, score = 0, timer = 0, jump = false;
+  let bgIndex = 0, villainY = CANVAS_HEIGHT, targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
   let obstacleSpeed = BASE_OBSTACLE_SPEED, obstacleFrequency = BASE_OBSTACLE_FREQUENCY;
   let villainReady = false;
+  let nextStageScore = 200; // 200점마다 스테이지 전환
 
+  const scoreText = document.getElementById('score');
   const runner = { x: RUNNER_START_X, y: RUNNER_START_Y, width: RUNNER_WIDTH, height: RUNNER_HEIGHT };
-  const obstacles = [];
 
   class Obstacle {
     constructor(image) {
@@ -122,6 +117,7 @@ window.onload = () => {
       ctx.drawImage(this.image, this.x, this.y, this.width, this.height);
     }
   }
+  const obstacles = [];
 
   function drawStartScreen() {
     ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
@@ -129,36 +125,21 @@ window.onload = () => {
     ctx.drawImage(images.startBtn, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
   }
 
-  function isCollision(a, b) {
-    return !(a.x > b.x + b.width || a.x + a.width < b.x || a.y > b.y + b.height || a.y + a.height < b.y);
-  }
-
-  function drawGameOverScreen() {
-    ctx.drawImage(images.gameOver, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
-    ctx.drawImage(images.restart, (CANVAS_WIDTH - 100) / 2, (CANVAS_HEIGHT + 50) / 2, 100, 50);
-  }
-
   function animate() {
-    if (gameOver) {
-      drawGameOverScreen();
-      return;
-    }
+    if (gameOver) return;
 
     requestAnimationFrame(animate);
     ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
     ctx.drawImage(images['bg' + bgIndex], 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
 
-    // 악당 등장
     if (!villainReady && villainY > targetVillainY) {
       villainY -= 5;
     } else {
-      villainY = targetVillainY;
       villainReady = true;
     }
 
     ctx.drawImage(images['villain' + bgIndex], CANVAS_WIDTH - VILLAIN_WIDTH, villainY, VILLAIN_WIDTH, VILLAIN_HEIGHT);
 
-    // 장애물 생성
     if (villainReady && timer % obstacleFrequency === 0) {
       if (bgIndex < 5) {
         obstacles.push(new Obstacle(images['obstacle' + bgIndex]));
@@ -170,7 +151,6 @@ window.onload = () => {
       }
     }
 
-    // 장애물 이동
     obstacles.forEach((obs, idx) => {
       obs.x -= obstacleSpeed;
       obs.draw(bgIndex === 5);
@@ -182,8 +162,7 @@ window.onload = () => {
         score += SCORE_PER_OBSTACLE;
         scoreText.textContent = '현재점수: ' + score;
 
-        // 스테이지 전환
-        if (score % 200 === 0) {
+        if (score >= nextStageScore) {
           villainReady = false;
           let exitInterval = setInterval(() => {
             villainY += 5;
@@ -194,31 +173,42 @@ window.onload = () => {
               obstacleFrequency = Math.max(20, obstacleFrequency - 10);
               villainY = CANVAS_HEIGHT;
               targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
+              nextStageScore += 200;
             }
           }, 30);
         }
       }
     });
 
-    // 점프 처리
-    if (jump && runner.y > MAX_JUMP_HEIGHT) {
-      runner.y -= JUMP_SPEED;
-      if (runner.y <= MAX_JUMP_HEIGHT) runner.y = MAX_JUMP_HEIGHT; // 천장에서 멈추게
-    } else if (!jump && runner.y < RUNNER_START_Y) {
-      runner.y += JUMP_SPEED;
-      if (runner.y > RUNNER_START_Y) runner.y = RUNNER_START_Y;
-    }
-
     const runnerImage = (gameOver ? images.runnerCrash : (jump || runner.y < RUNNER_START_Y) ? images.runnerFly : images.runnerSit);
     ctx.drawImage(runnerImage, runner.x, runner.y, runner.width, runner.height);
 
+    if (jump && runner.y > MAX_JUMP_HEIGHT) {
+      runner.y -= JUMP_SPEED;
+    } else if (!jump && runner.y < RUNNER_START_Y) {
+      runner.y += JUMP_SPEED;
+    }
+    if (runner.y < MAX_JUMP_HEIGHT) runner.y = MAX_JUMP_HEIGHT;
+    if (runner.y > RUNNER_START_Y) runner.y = RUNNER_START_Y;
+
     timer++;
+
+    if (gameOver) drawGameOver();
   }
 
-  // 이벤트 처리
+  function isCollision(a, b) {
+    return !(a.x > b.x + b.width || a.x + a.width < b.x || a.y > b.y + b.height || a.y + a.height < b.y);
+  }
+
+  function drawGameOver() {
+    ctx.drawImage(images.gameOver, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
+    ctx.drawImage(images.restart, (CANVAS_WIDTH - 100) / 2, (CANVAS_HEIGHT + 50) / 2, 100, 50);
+  }
+
   canvas.addEventListener('click', e => {
     const rect = canvas.getBoundingClientRect();
     const x = e.clientX - rect.left, y = e.clientY - rect.top;
+
     if (!gameStarted) {
       if (x >= (CANVAS_WIDTH - 200) / 2 && x <= (CANVAS_WIDTH + 200) / 2 &&
           y >= (CANVAS_HEIGHT + 100) / 2 && y <= (CANVAS_HEIGHT + 200) / 2) {
